--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>صفحة ججج</title>
+    <title>صفحة دددد</title>
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -112,7 +112,7 @@
 
      function submitFeedback() {
     const phone = document.getElementById("phone").value;
-    const rating = selectedRating; // لأن التقييم يتم تحديده باستخدام النجوم
+    const rating = selectedRating; // يجب استخدام selectedRating من النجوم
     const suggestion = document.getElementById("suggestion").value;
     
     if (!phone || !rating) {
@@ -125,17 +125,13 @@
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({ phone, rating, suggestion })
     })
-    .then(response => {
-        if (!response.ok) {
-            throw new Error("خطأ في الاتصال بالسيرفر");
-        }
-        return response.json();
-    })
+    .then(response => response.json())
     .then(data => {
         if (data.status === 'success') {
-            alert("✅ " + data.message); // عرض رسالة النجاح
+            alert("✅ " + data.message); 
+            fetchReviews(); // إعادة تحميل البيانات بعد الإرسال
         } else {
-            alert("⚠️ " + data.message); // عرض رسالة الخطأ (سواء كان تقييم اليوم أو تقييم سابق)
+            alert("⚠️ " + data.message);
         }
     })
     .catch(error => {
@@ -144,9 +140,15 @@
     });
 }
 
+
     
   function fetchReviews() {
-    fetch('https://script.google.com/macros/s/AKfycbz14pSPDmZorQMXrwxxb5fPwsIiLLHTUc8ArZOGNWGHrSZuitR4oQBFobgAMZj2a1ZtOw/exec?action=getReviews')
+    fetch('https://script.google.com/macros/s/AKfycbz14pSPDmZorQMXrwxxb5fPwsIiLLHTUc8ArZOGNWGHrSZuitR4oQBFobgAMZj2a1ZtOw/exec?action=getReviews', {
+        method: 'GET',
+        headers: {
+            'Content-Type': 'application/json'
+        }
+    })
     .then(response => response.json())
     .then(data => {
         let tableBody = document.getElementById("reviewTableBody");
@@ -162,10 +164,10 @@
         });
     })
     .catch(error => console.error("Error fetching reviews:", error));
-  }
+}
 
-  // جلب التقييمات عند تحميل الصفحة
-  document.addEventListener("DOMContentLoaded", fetchReviews);
+// تحميل التقييمات عند فتح الصفحة
+document.addEventListener("DOMContentLoaded", fetchReviews);
 
 
     </script>
