--- a/index.html
+++ b/index.html
@@ -15,14 +15,37 @@
             direction: rtl;
             text-align: center;
             margin: 50px;
+            background-color: #f8f9fa;
         }
-        form {
+        .container {
             max-width: 400px;
             margin: auto;
             padding: 20px;
             border: 1px solid #ddd;
             border-radius: 10px;
+            background-color: white;
             box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+        }
+        .logo {
+            max-width: 150px;
+            margin-bottom: 15px;
+        }
+        .stars {
+            display: flex;
+            justify-content: center;
+            direction: ltr;
+        }
+        .stars input {
+            display: none;
+        }
+        .stars label {
+            font-size: 30px;
+            color: gray;
+            cursor: pointer;
+            transition: color 0.3s;
+        }
+        .stars input:checked ~ label {
+            color: gold;
         }
         input, textarea, button {
             width: 100%;
@@ -31,23 +54,42 @@
             border: 1px solid #ccc;
             border-radius: 5px;
         }
+        button {
+            background-color: #28a745;
+            color: white;
+            font-size: 16px;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #218838;
+        }
     </style>
 </head>
 <body>
 
-    <h2>نموذج التقييم</h2>
-    <form id="feedbackForm">
-        <label for="phone">رقم الهاتف:</label>
-        <input type="tel" id="phone" required>
+    <div class="container">
+        <img src="https://f.top4top.io/p_33536rt2k1.png" alt="لوجو" class="logo">  <!-- 🔹 ضع رابط اللوجو الخاص بك هنا -->
+        <h2>نموذج التقييم</h2>
+        
+        <form id="feedbackForm">
+            <label for="phone">رقم الهاتف:</label>
+            <input type="tel" id="phone" required>
 
-        <label for="rating">التقييم (من 1 إلى 5):</label>
-        <input type="number" id="rating" min="1" max="5" required>
+            <label>التقييم:</label>
+            <div class="stars">
+                <input type="radio" id="star5" name="rating" value="5"><label for="star5">★</label>
+                <input type="radio" id="star4" name="rating" value="4"><label for="star4">★</label>
+                <input type="radio" id="star3" name="rating" value="3"><label for="star3">★</label>
+                <input type="radio" id="star2" name="rating" value="2"><label for="star2">★</label>
+                <input type="radio" id="star1" name="rating" value="1" checked><label for="star1">★</label>
+            </div>
 
-        <label for="comments">ملاحظات:</label>
-        <textarea id="comments"></textarea>
+            <label for="comments">ملاحظات:</label>
+            <textarea id="comments"></textarea>
 
-        <button type="submit">إرسال التقييم</button>
-    </form>
+            <button type="submit">إرسال التقييم</button>
+        </form>
+    </div>
 
     <script>
         // 🔹 إعداد Firebase
@@ -68,7 +110,7 @@
             event.preventDefault();
 
             const phone = document.getElementById('phone').value.trim();
-            const rating = document.getElementById('rating').value;
+            const rating = document.querySelector('input[name="rating"]:checked').value;
             const comments = document.getElementById('comments').value.trim();
 
             if (!phone || !rating) {
